# schedule-builder

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  chedule_builder.db.session import engine  main.py  pyproject.toml
.github/workflows/: ci.yml
data/prompts/: scope_analysis.md
docs/00_overview/: 00_overview.md  01_mvp_scope_definition.md  02_tech_stack_workflow.md
docs/01_architecture/: 00_project_structure.md
docs/04_checklists/: 00_mvp_checklist.md
docs/05_database/: 00_schema.md  01_alembic_initial_migration_spec.md
docs/08_instructions/: 00_app_instructions.md
src/schedule_builder/: main.py
src/schedule_builder/api/: router.py
src/schedule_builder/auth/: dependencies.py  routes.py  schemas.py  service.py  tokens.py
src/schedule_builder/config/: settings.py
src/schedule_builder/core/: exceptions.py  logging.py  middleware.py  security.py
src/schedule_builder/db/: base.py  session.py
src/schedule_builder/integrations/: claude_client.py  openai_client.py
src/schedule_builder/models/: __init__.py  base.py  document.py  project.py  scope_analysis.py  user.py  wbs.py
src/schedule_builder/repositories/: document_repository.py  project_repository.py  scope_repository.py  user_repository.py  (+1 more)
tests/: conftest.py
tests/api/: test_admin_route.py  test_auth_routes.py  test_documents_route.py  test_exceptions.py  test_scope_route.py  test_users_route.py  test_wbs_route.py
tests/integration/: test_wbs_workflow.py
tests/unit/: test_document_service.py  test_output_service.py  test_scope_service.py  test_wbs_service.py
(+21 files in other folders)
