[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "schedule-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.111.0",
    "argon2-cffi>=23.1.0",
    "fastapi>=0.137.2",
    "openai>=2.43.0",
    "pdfplumber>=0.11.10",
    "pre-commit>=4.6.0",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0.0",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "psycopg2>=2.9.12",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "mypy>=1.18.2",
    "pytest>=8.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:passlib.utils",
    "ignore::DeprecationWarning:passlib.handlers.argon2",
    "ignore::jwt.warnings.InsecureKeyLengthWarning",
]
